	match the new function declarations and such.

	The plugin system itself was only slightly modified. However, the
	arguments passed to signal handlers have been modified in some cases.
	Look at the updates SIGNALS file to see what the new arguments passed
	to your handlers are. In some cases the only change necessary will be
	to modify the function declaration; in many cases the changes will be
	much more substantial.

	The new system allows for protocol plugins. New protocols (including
	Yahoo, MSN, IRC, ICQ, etc) can be loaded dynamically. However, most
	of these plugins are going to be controlled by the gaim maintainers.
	If you have interest in writing a protocol plugin, please talk to one
	of us before you start.

	That's about all that I'm going to talk about. My SN is EWarmenhoven
	if you have any questions (like what the hell struct gaim_connection is
	and what its relation to struct aim_user is).

version 0.10.0:
	Rather than have a separate CFLAGS and LDFLAGS for the plugins than
	for gaim, and doing all kinds of crazy things to work around the
	problems that creates, the plugins now have the same CFLAGS and LIBS.
	The plugins also have PLUGIN_LIBS which can be passed at make time.
	This makes things like #ifdef USE_APPLET and #ifdef USE_PERL much more
	reliable. (#include "config.h" in order to get all the #defines)

	The internals of gaim plugin events got modified slightly. It should
	have no effect on existing plugins or the way plugins are made. The
	change was to make my life easier adding perl. It should also make
	adding new plugin events even easier than before (though I doubt that
	any more will ever be added). Also, events are printed to the debug
	window.

	event_buddy_away was being triggered every blist_update for every away
	buddy. This got fixed, but now when you sign on, event_buddy_away may
	be called before event_buddy_signon. Not that it should matter much.

	Just after I finish saying that no more events will be added, I go and